manifests/api.deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2019-08-19T11:54:31Z"
  generation: 1
  labels:
    k8s-app: api
  name: api
  namespace: default
  resourceVersion: "12215"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/api
  uid: 1ad60225-c278-11e9-b515-3645f38f3143
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: api
      name: api
    spec:
      containers:
      - image: fabmedicalmcw.azurecr.io/content-api:161
        imagePullPolicy: IfNotPresent
        name: api
        resources:
          requests:
            cpu: 125m
            memory: 128Mi
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2019-08-19T11:54:31Z"
    lastUpdateTime: "2019-08-19T11:54:41Z"
    message: ReplicaSet "api-5dbd474844" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2019-08-19T12:46:36Z"
    lastUpdateTime: "2019-08-19T12:46:36Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
